# brain-fwi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  brain_recovery_fast.h5  brain_recovery_fast_v2.h5  pyproject.toml  run_cloud.sh  run_dgx.sh  run_full_usct.py  run_runpod.py  slurm_gen_phase0.sh  slurm_usct.sh
.github/workflows/: test.yml
brainlife/: Dockerfile  README.md  config.json.example  main.py  manifest.json
brainlife_openlifu/: Dockerfile  main.py  manifest.json
docs/: conf.py  requirements.txt
docs/_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  contributing.doctree  index.doctree
docs/_build/html/.doctrees/api/: brain_fwi.doctree  brain_fwi.inversion.doctree  brain_fwi.inversion.fwi.doctree  brain_fwi.inversion.losses.doctree  brain_fwi.inversion.resolution.doctree  brain_fwi.phantoms.brainweb.doctree  brain_fwi.phantoms.doctree  brain_fwi.phantoms.mida.doctree  (+7 more)
docs/_build/html/_modules/: index.html
docs/_build/html/api/: brain_fwi.html  brain_fwi.inversion.fwi.html  brain_fwi.inversion.html  brain_fwi.inversion.losses.html  brain_fwi.inversion.resolution.html  brain_fwi.phantoms.brainweb.html  brain_fwi.phantoms.html  brain_fwi.phantoms.mida.html  brain_fwi.phantoms.properties.html  brain_fwi.simulation.forward.html  brain_fwi.simulation.html  brain_fwi.transducers.helmet.html  brain_fwi.transducers.html  brain_fwi.utils.html  brain_fwi.utils.wavelets.html
docs/_build/html/tutorials/: forward_simulation.html  fwi_reconstruction.html  head_phantoms.html
docs/api/: brain_fwi.inversion.resolution.rst  brain_fwi.inversion.rst  brain_fwi.phantoms.brainweb.rst  brain_fwi.phantoms.rst  brain_fwi.rst  brain_fwi.transducers.helmet.rst  brain_fwi.transducers.rst  brain_fwi.utils.rst
docs/datasets/: icl-dual-probe-2023.md
docs/design/: data_pipeline.md  phase5_treeby_cox_absorption.md
docs/dev/: apple-silicon-gpu.md
docs/evidence/: phase4_readiness.md
docs/tutorials/: tus_simulation.md
examples/: 00_quick_fwi_test.py  01_2d_axial_fwi.py  02_3d_brain_fwi.py  03_3d_brain_recovery.py  04_tus_forward_simulation.py  04_vhd_mida_fwi.py
paper/: brain_fwi.Rnw
results/: openfwi_bench_b16.json  openfwi_bench_b32.json  openfwi_bench_b4.json  openfwi_bench_b8.json  openfwi_bench_m5max.json
results/vhd_mida/: vhd_mida_fwi.h5  vhd_mida_fwi.json
scripts/: bench_fno_gather_vs_pool.py  bench_openfwi_jax_m5max.py  gen_phase0.py  icl_calibration_diagnostic.py  icl_forward_validation.py  icl_syn_vs_exp_diagnostic.py  inspect_sci_head.py  modal_benchmark_forward.py  modal_extended_fwi.py  modal_gen_phase0.py  modal_mida_192_voxel_fwi.py  modal_mida_256.py  modal_npe_noise_sensitivity.py  modal_train_fno_phase0.py  modal_train_npe.py  modal_validate_siren.py  phase5_attenuation_demo.py  phase5_cann_coupling_demo.py  phase5_residual_fno_demo.py  recompute_984_mida_metrics.py  run_runpod_gen_phase0.py  run_runpod_siren_validation.py  theta_dim_sweep.py  toy_2d_fno.py  train_fno_on_phase0.py  train_npe_on_phase0.py  validate_siren_vs_voxel.py
src/brain_fwi/: __init__.py
src/brain_fwi/constitutive/: __init__.py  benchmark.py  cann.py  kk.py
src/brain_fwi/data/: __init__.py  icl_dual_probe.py  sharded_reader.py  sharded_writer.py
src/brain_fwi/diagnostics/: __init__.py  calibration.py
src/brain_fwi/inference/: __init__.py  dataprep.py  diffusion.py  flow.py  sbc.py
src/brain_fwi/inversion/: __init__.py  fwi.py  losses.py  param_field.py  resolution.py
src/brain_fwi/phantoms/: __init__.py  augment.py  brainweb.py  itrusst.py  mida.py  properties.py  sci_head.py  simnibs.py  synthetic.py  tfuscapes.py
src/brain_fwi/simulation/: __init__.py  checkpointed_scan.py  forward.py
src/brain_fwi/surrogate/: __init__.py  fno2d.py  fno3d.py  train.py  uno.py  validation.py
src/brain_fwi/transducers/: __init__.py  focused.py  helmet.py
src/brain_fwi/utils/: __init__.py  wavelets.py
src/brain_fwi/validation/: __init__.py  compare.py
tests/: conftest.py  test_attenuation_effect.py  test_augment.py  test_bandpass.py  test_calibration_diagnostic.py  test_constitutive.py  test_dataprep_stacking.py  test_diffusion_prior.py  test_e2e.py  test_flow.py  test_fno2d.py  test_fno3d.py  test_forward.py  test_fwi.py  test_fwi_score_prior_integration.py  test_icl_dual_probe_loader.py  test_icl_forward_sim_parity.py  test_inference_dataprep.py  test_integration.py  test_itrusst.py  test_load_theta_matrix.py  test_losses.py  test_mida.py  test_multifreq_fwi.py  test_param_field.py  test_phantom.py  test_properties.py  test_resolution.py  test_sbc.py  test_sci_head.py  test_sharded_reader.py  test_sharded_writer.py  test_simnibs.py  test_surrogate_train.py  test_surrogate_validation.py  test_tfuscapes.py  test_transducers.py  test_uno.py  test_uno_scaffold.py  test_validation.py  (+1 more)
(+19 files in other folders)
