[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-fwi"
version = "0.1.0"
description = "Full Waveform Inversion of the human brain using transcranial ultrasound"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Morgan Hough" }]

dependencies = [
    "jax>=0.5.0",
    "jwave @ git+https://github.com/ucl-bug/jwave.git",
    "jaxdf @ git+https://github.com/ucl-bug/jaxdf.git",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.26.0",
    "nibabel>=5.0.0",
    "brainweb-dl>=0.3.0",
    "matplotlib>=3.8.0",
    "h5py>=3.8.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.5.0"]
cuda13 = ["jax[cuda13]>=0.5.0"]
dev = ["pytest>=8.0", "pytest-xdist"]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser>=2.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints>=2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/brain_fwi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that take >60s (deselect with -m 'not slow')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
